--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,29 @@
-.course-content ul.topics {
-    margin: 0;
+body.format-multitopic ul.sections {
     list-style: none;
 }
 
-.course-content ul.topics li.section .content {
-    margin: 0 40px;
+
+/* ADDED */
+
+/* Header */
+body.format-multitopic .page-header-headings {
+    display: none;
+}
+body.format-multitopic #course-header {
+    width: 100%;
 }
 
-.course-content ul.topics li.section .left,
-.course-content ul.topics li.section .right {
-    width: 40px;
-    padding: 0 6px;
+/* Hide collapsed sections */
+body.format-multitopic ul.sections li.section.section-collapsed .content .section_availability ~ * {
+    display: none;
 }
 
-.course-content ul.topics li.section .left {
-    padding-top: 22px;
-    text-align: right;
+/* Hide activity navigation.
+Conditional section availability isn't propagated to subsections, so activities may be available when they shouldn't be.
+Not sure how to fix this properly, but we can at least avoid confusing users by pointing them to activities that shouldn't be available. */
+body.format-multitopic #page #page-content .m-t-2.m-b-1,
+body.format-multitopic #page #page-content .mt-2.mb-1.activity-navigation {
+    display: none;
 }
 
-.jsenabled .course-content ul.topics li.section .left,
-.jsenabled .course-content ul.topics li.section .right {
-    width: auto;
-}
-
-.course-content ul.topics li.section .left .section-handle img.icon {
-    padding: 0;
-    vertical-align: baseline;
-}
-
-.course-content ul.topics li.section .section_action_menu .textmenu,
-.course-content ul.topics li.section .section_action_menu .menu-action-text {
-    white-space: nowrap;
-}
+/* END ADDED */
