--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ body.format-multitopic ul.sections li.section.section-collapsed .content .sectio
 
 /* Hide activity navigation.
 Conditional section availability isn't propagated to subsections, so activities may be available when they shouldn't be.
-Not sure how to fix this properly, but we can at least avoid confusing users by pointing them to activities that shouldn't be available. */
+Not sure how to fix this properly,
+but we can at least avoid confusing users by pointing them to activities that shouldn't be available. */
 body.format-multitopic #page #page-content .m-t-2.m-b-1,
 body.format-multitopic #page #page-content .mt-2.mb-1.activity-navigation {
     display: none;
