--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body.format-multitopic ul.sections li.section.section-collapsed .content .sectio
 Conditional section availability isn't propagated to subsections, so activities may be available when they shouldn't be.
 Not sure how to fix this properly,
 but we can at least avoid confusing users by pointing them to activities that shouldn't be available. */
-body.format-multitopic #page #page-content .m-t-2.m-b-1,
-body.format-multitopic #page #page-content .activity-navigation {
+body.format-multitopic.path-mod.pagelayout-incourse #page #page-content [role='main'] + .m-t-2.m-b-1,
+body.format-multitopic.path-mod.pagelayout-incourse #page #page-content .activity-navigation {
     display: none;
 }
 
