--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,7 @@ body.format-multitopic.jsenabled ul.sections li.section.section-collapsed .conte
     display: none;
 }
 
-/* Hide activity navigation.
-Conditional section availability isn't propagated to subsections, so activities may be available when they shouldn't be.
-Not sure how to fix this properly,
-but we can at least avoid confusing users by pointing them to activities that shouldn't be available. */
+/* Hide activity navigation. */
 body.format-multitopic.path-mod.pagelayout-incourse #page #page-content [role='main'] + .m-t-2.m-b-1,
 body.format-multitopic.path-mod.pagelayout-incourse #page #page-content .activity-navigation {
     display: none;
