--- a/styles.css
+++ b/styles.css
@@ -24,4 +24,7 @@ body.format-multitopic.path-mod.pagelayout-incourse #page #page-content .activit
     display: none;
 }
 
+body.format-multitopic #region-main .nav-tabs i.cantadd.dimmed {
+    color: #6c757d;
+}
 /* END ADDED */
