--- a/templates/courseformat/courseindex/section.mustache
+++ b/templates/courseformat/courseindex/section.mustache
@@ -64,6 +64,7 @@
     data-for="section"
     data-id="{{id}}"
     data-number="{{number}}"
+    data-levelsan="{{levelsan}}"
     role="treeitem"
     aria-owns="courseindexcollapse{{number}}"
     style="padding-left: {{indent}}em;"
@@ -123,7 +124,7 @@
 </div>
 {{#testingsection}}</div>{{/testingsection}}
 {{#js}}
-require(['core_courseformat/local/courseindex/section'], function(component) {
+require(['format_multitopic/courseformat/courseindex/section'], function(component) {
     component.init('{{uniqid}}-course-index-section-{{id}}');
 });
 {{/js}}
