Update whether section is displayed

--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -93,6 +93,7 @@
     data-for="section"
     data-id="{{id}}"
     data-number="{{num}}"
+    data-fmtonpage="{{fmtonpage}}"
     {{^fmtonpage}}style="display: none;"{{/fmtonpage}}
 >
     <div class="course-section-header d-flex"
