Update tabs with course index drag and drop

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -179,7 +179,7 @@
     {{/movebutton}}
     <div style="clear: both;">
         {{#tabs}}
-            {{> core/tabtree}}
+        {{> format_multitopic/courseformat/tabtree}}
         {{/tabs}}
     </div>
     {{{completionhelp}}}
