--- a/templates/courseformat/tab.mustache
+++ b/templates/courseformat/tab.mustache
@@ -27,9 +27,12 @@ along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
             "link": "http://moodle.org"
         }],
         "title": "Moodle.org",
-        "text": "Moodle community"
+        "text": "Moodle community",
+        "testingtab": true
     }
 }}
+{{#testingtab}}<ul>{{/testingtab}}
 <li class="nav-item">
     <a class="nav-link{{#active}} active{{/active}}{{#inactive}} disabled{{/inactive}}" {{#link}}href="{{{link}}}"{{/link}} title="{{title}}">{{{text}}}</a>
 </li>
+{{#testingtab}}</ul>{{/testingtab}}
