--- a/styles.css
+++ b/styles.css
@@ -31,5 +31,8 @@ body.format-multitopic.path-mod.pagelayout-incourse #page #page-content .activit
 body.format-multitopic .courseindex .courseindex-section.dropready .courseindex-item-content {
     padding-bottom: 0;
 }
+body.format-multitopic.editing .courseindex .courseindex-section.dropready .courseindex-item-content .courseindex-sectioncontent {
+    padding-bottom: 1em;
+}
 
 /* END ADDED */
