change expand / collapse code

--- a/templates/courseformat/courseindex/section.mustache
+++ b/templates/courseformat/courseindex/section.mustache
@@ -31,6 +31,7 @@
         "visible": 1,
         "hasrestrictions": 0,
         "indent": 0,
+        "levelsan": 1,
         "cms": [
             {
                 "id": 10,
@@ -54,6 +55,8 @@
                 "isactive": 1
             }
         ],
+        "topics": [],
+        "subsections": [],
         "testingsection": true
     }
 }}
