Add CMIDs to Mustache templates

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -37,6 +37,7 @@
                                     "hasname": "true"
                                 },
                                 "id": 3,
+                                "cmid": 3,
                                 "anchor": "module-3",
                                 "module": "forum",
                                 "extraclasses": "newmessages"
@@ -67,6 +68,7 @@
                                     "hasname": "true"
                                 },
                                 "id": 4,
+                                "cmid": 4,
                                 "anchor": "module-4",
                                 "module": "forum",
                                 "extraclasses": "newmessages"
@@ -96,6 +98,7 @@
                                     "hasname": "true"
                                 },
                                 "id": 5,
+                                "cmid": 5,
                                 "anchor": "module-5",
                                 "module": "forum",
                                 "extraclasses": "newmessages"
@@ -150,6 +153,7 @@
                                 "hasname": "true"
                             },
                             "id": 4,
+                            "cmid": 4,
                             "anchor": "module-4",
                             "module": "assign",
                             "extraclasses": ""
