--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -39,6 +39,7 @@
                             "availability": ""
                         },
                         "id": 3,
+                        "cmid": 3,
                         "module": "forum",
                         "anchor": "activity-3",
                         "extraclasses": "newmessages"
@@ -52,6 +53,7 @@
                             "availability": ""
                         },
                         "id": 4,
+                        "cmid": 4,
                         "anchor": "activity-4",
                         "module": "assign",
                         "extraclasses": ""
