--- a/templates/courseformat/content/section/cmlist.mustache
+++ b/templates/courseformat/content/section/cmlist.mustache
@@ -29,6 +29,7 @@
                         "hasname": "true"
                     },
                     "id": 3,
+                    "cmid": 3,
                     "anchor": "module-3",
                     "module": "forum",
                     "extraclasses": "newmessages"
@@ -41,6 +42,7 @@
                         "hasname": "true"
                     },
                     "id": 4,
+                    "cmid": 4,
                     "anchor": "module-4",
                     "module": "assign",
                     "extraclasses": ""
