--- a/templates/courseformat/content/section/header.mustache
+++ b/templates/courseformat/content/section/header.mustache
@@ -35,7 +35,7 @@
         {{/ core_courseformat/local/content/section/bulkselect }}
     {{/hasbulkedittools}}
     {{#sitehome}}
-        <h2 class="sectionid-{{id}}-title sectionname">
+        <h2 id="sectionid-{{id}}-title" class="sectionname">
             {{{title}}}
         </h2>
     {{/sitehome}}
@@ -65,8 +65,8 @@
                 <i class="{{fmticon}}"></i>
             </span>
             {{/iscollapsible}}
-            <h3 class="sectionid-{{id}}-title sectionname course-content-item d-flex align-self-stretch align-items-center mb-0"
-                id="coursecontentsection{{num}}" data-for="section_title" data-id="{{id}}" data-number="{{num}}">
+            <h3 class="sectionname course-content-item d-flex align-self-stretch align-items-center mb-0"
+                id="sectionid-{{id}}-title" data-for="section_title" data-id="{{id}}" data-number="{{num}}">
                 {{{title}}}
             </h3>
         </div>
