Reload section fix

--- a/templates/courseformat/content/section/header.mustache
+++ b/templates/courseformat/content/section/header.mustache
@@ -29,11 +29,11 @@
     }
 }}
 
-    {{#hasbulkedittools}}
+    {{#sectionbulk}}
         {{$ core_courseformat/local/content/section/bulkselect }}
             {{> core_courseformat/local/content/section/bulkselect }}
         {{/ core_courseformat/local/content/section/bulkselect }}
-    {{/hasbulkedittools}}
+    {{/sectionbulk}}
     {{#sitehome}}
         <h2 id="sectionid-{{id}}-title" class="sectionname">
             {{{title}}}
