Moodle 4.5 reactive add topic WIP 1

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -205,6 +205,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/content'], function(component) {
-    component.init('{{uniqid}}-course-format');
+    component.init('{{uniqid}}-course-format', undefined, undefined, {{version}});
 });
 {{/js}}
