--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -139,7 +139,7 @@
             {{/ core_courseformat/local/content/section/controlmenu }}
         {{/controlmenu}}
     </div>
-    <div id="coursecontentcollapse{{num}}"
+    <div id="coursecontentcollapse{{id}}"
         class="content 
             {{^sitehome}}course-content-item-content {{#iscollapsible}}collapse{{/iscollapsible}} {{^contentcollapsed}}show{{/contentcollapsed}}{{/sitehome}}
         ">
