--- a/templates/courseformat/content/section/header.mustache
+++ b/templates/courseformat/content/section/header.mustache
@@ -43,10 +43,10 @@
         <div class="d-flex align-items-start position-relative">
             {{#iscollapsible}}
             <a role="button" data-toggle="collapse"
-               href="#coursecontentcollapse{{num}}"
-               id="collapssesection{{num}}"
+               href="#coursecontentcollapse{{id}}"
+               id="collapssesection{{id}}"
                aria-expanded="{{^contentcollapsed}}true{{/contentcollapsed}}{{#contentcollapsed}}false{{/contentcollapsed}}"
-               aria-controls="coursecontentcollapse{{num}}"
+               aria-controls="coursecontentcollapse{{id}}"
                class="btn btn-icon mr-1 icons-collapse-expand justify-content-center
                     {{^editing}} stretched-link {{/editing}}
                     {{#contentcollapsed}} collapsed {{/contentcollapsed}}"
