Moodle 4.5 reactive add topic WIP 2

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -166,7 +166,8 @@
             "summary": {
                 "summarytext": "Summary text!"
             }
-        }
+        },
+        "version": 2022041900,
     }
 }}
 <div id="{{uniqid}}-course-format">
