Moodle 4.5 reactive add topic WIP 7

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -167,7 +167,7 @@
                 "summarytext": "Summary text!"
             }
         },
-        "version": 2022041900,
+        "version": 2022041900
     }
 }}
 <div id="{{uniqid}}-course-format">
