Reactive update fixes

--- a/templates/courseformat/courseindex/courseindex.mustache
+++ b/templates/courseformat/courseindex/courseindex.mustache
@@ -60,8 +60,7 @@
                         "accessvisible": 1
                     }
                 ],
-                "subsections": [],
-                "topics": []
+                "subsections": []
             },
             {
                 "title": "City of God or Cidade de Deus",
@@ -100,8 +99,7 @@
                         "accessvisible": 1
                     }
                 ],
-                "subsections": [],
-                "topics": []
+                "subsections": []
             }
         ],
         "sections": []
