--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -180,7 +180,7 @@
         {{/tabs}}
     </div>
     {{{completionhelp}}}
-    <ul class="sections topics" data-for="course_sectionlist">
+    <ul class="sections topics" data-for="course_sectionlist" data-originalsinglesectionid="{{{originalsinglesectionid}}}">
         {{#initialsection}}
             {{$ core_courseformat/local/content/section }}
                 {{> format_multitopic/courseformat/content/section }}
