Section move final deprecation (MDL-80116)

--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,12 @@ body.format-multitopic .course-content ul.nav-tabs li a div.tab_content.dimmed {
 body.format-multitopic .course-content ul.nav-tabs li a.draggable {
     cursor: move;
 }
-body.format-multitopic.dragging.dir-ltr .course-content ul.nav-tabs li.drop-before,
 body.format-multitopic.dragging.dir-rtl .course-content ul.nav-tabs li.drop-after {
     border-left: 1px solid #212529;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-body.format-multitopic.dragging.dir-ltr .course-content ul.nav-tabs li.drop-after,
-body.format-multitopic.dragging.dir-rtl .course-content ul.nav-tabs li.drop-before {
+body.format-multitopic.dragging.dir-ltr .course-content ul.nav-tabs li.drop-after {
     border-right: 1px solid #212529;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
