Replace old URLs with update URLs (MDL-82767)

--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -95,6 +95,7 @@
     data-for="section"
     data-id="{{id}}"
     data-number="{{num}}"
+    data-sectionname="{{sectionname}}"
     data-fmtonpage="{{fmtonpage}}"
     {{^fmtonpage}}style="display: none;"{{/fmtonpage}}
 >
