Display all-sections toggler on section pages (MDL-81768) WIP 1

--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -124,12 +124,11 @@
                 <div class="flex-fill d-flex justify-content-end mr-2 align-self-start mt-2">
                     <a
                         id="collapsesections"
-                        class="section-collapsemenu collapsed"
+                        class="section-collapsemenu collapsed v-hidden"
                         href="#"
                         aria-expanded="false"
                         role="button"
                         data-toggle="toggleall"
-                        style="visibility: hidden;"
                     >
                         <span class="collapseall text-nowrap">{{#str}}collapseall{{/str}}</span>
                         <span class="expandall text-nowrap">{{#str}}expandall{{/str}}</span>
