--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -170,7 +170,7 @@
         }
     }
 }}
-<div id="{{uniqid}}-course-format">
+<div id="course-format-{{uniqid}}">
     <h2 class="accesshide">{{{title}}}</h2>
     <div style="clear: both;">
         {{#tabs}}
@@ -214,6 +214,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/content'], function(component) {
-    component.init('{{uniqid}}-course-format');
+    component.init('#page');
 });
 {{/js}}
